2014-08-18  Holger Seelig  <holger.seelig@yahoo.de>

	* InlineEditor.xml:
	* TextureEditor.xml:
	* InlineEditor.h:
	* MFStringURLWidget.h:
	* X3DImageTextureEditor.h:
	* X3DMovieTextureEditor.h:
	* X3DTextureNodeEditor.cpp:
	* X3DImageTextureEditor.cpp:
	* X3DMovieTextureEditor.cpp: 

2014-08-18  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DEditorObject.h:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* SFStringEntry.h:
	* InlineEditor.xml:
	* InlineEditor.h:
	* FileOpenDialog.xml:
	* MFStringURLWidget.h:
	* InlineEditor.cpp:
	* SFStringComboBoxText.h:
	* FileOpenDialog.h:
	* X3DInlineEditorInterface.h:
	* FileOpenDialog.cpp:
	* X3DFileOpenDialogInterface.h:
	* X3DInlineEditorInterface.cpp:
	* X3DFileOpenDialogInterface.cpp: 

2014-08-18  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* NodeIndex.h:
	* NodeIndex.cpp: 

2014-08-17  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUserInterface.h:
	* BrowserWindow.h:
	* X3DUserInterface.cpp:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* ViewpointList.xml:
	* X3DBrowserEditor.cpp:
	* NodeIndex.h:
	* NodeIndex.xml:
	* LODEditor.cpp:
	* NodeIndex.cpp:
	* LightEditor.cpp:
	* InlineEditor.cpp:
	* X3DViewpointListInterface.h:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp:
	* X3DViewpointListInterface.cpp: 

2014-08-17  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* titania:
	* Makefile.am:
	* DialogFactory.h:
	* NodeIndex.h:
	* LODEditor.h:
	* LODEditor.xml:
	* NodeIndex.xml:
	* LODEditor.cpp:
	* NodeIndex.cpp:
	* LightEditor.xml:
	* X3DLODEditor.h:
	* LightEditor.h:
	* InlineEditor.xml:
	* X3DLODEditor.cpp:
	* LightEditor.cpp:
	* InlineEditor.h:
	* InlineEditor.cpp:
	* X3DLODEditorInterface.h:
	* X3DNodeIndexInterface.h:
	* X3DNodeIndexInterface.cpp:
	* X3DLODEditorInterface.cpp:
	* X3DLightEditorInterface.h:
	* X3DInlineEditorInterface.h:
	* X3DLightEditorInterface.cpp:
	* X3DInlineEditorInterface.cpp: 

2014-08-17  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl: