@@ -1,5 +1,12 @@
 2014-08-18  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DInlineEditorInterface.h:
+	* X3DTextureEditorInterface.h:
+	* X3DInlineEditorInterface.cpp:
+	* X3DTextureEditorInterface.cpp: 
+
+2014-08-18  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* InlineEditor.xml:
 	* TextureEditor.xml:
 	* InlineEditor.h:
